201 - Fix display of multiple primary names in resource editor view

--- a/src/arches_common/media/css/project.css
+++ b/src/arches_common/media/css/project.css
@@ -18,3 +18,13 @@
     display: inline-block;
     vertical-align: top;
 }
+
+.ep-graph-title-icon {
+    vertical-align: top;
+}
+.ep-graph-title {
+    font-size: 1.4em;
+}
+.jstree-anchor {
+    height: 100% !important;
+}
