--- a/src/arches_bchp/arches_bchp/templates/views/resource/editor.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/resource/editor.htm
@@ -26,10 +26,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 {% block graph_title %}
 <!-- Page Title and Icon -->
 <div class="ep-tools-title">
-    <h1 class="page-header text-overflow ep-graph-title">
+    <h4 class="page-header text-overflow ep-graph-title">
         <i class="fa text-center icon-wrap bg-gray ep-graph-title-icon" data-bind="css: graphiconclass != (null || '') ? graphiconclass : 'fa fa-question'"></i>
-        <span data-bind="text: displayname"></span>
-    </h1>
+        <div style="display: inline-block" data-bind="html: displayname"></div>
+    </h4>
 </div>
 {% endblock graph_title %}
 
@@ -58,7 +58,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                                 <a class="jstree-anchor" href="#" tabindex="-1" data-bind="click: function () { selection('root'); }, css: {'jstree-clicked': selection() === 'root'}">
                                     <strong>
                                         <i data-bind="css: graphiconclass != (null || '') ? graphiconclass : 'fa fa-question'" role="presentation"></i>
-                                        <span data-bind="text: displayname"></span> (<span data-bind="text: graphname"></span>)
+                                        <span data-bind="html: displayname"></span> (<span data-bind="text: graphname"></span>)
                                     </strong>
                                 </a>
                                 <!-- ko foreach: { data: [$data], as: 'self' } -->
