--- a/src/arches_common/media/css/project.css
+++ b/src/arches_common/media/css/project.css
@@ -28,3 +28,46 @@
 .jstree-anchor {
     height: 100% !important;
 }
+
+@media (min-width: 1366px)
+{
+    .dl-horizontal dd {
+        margin-left: 170px !important;
+    }
+    .dl-horizontal dt {
+        width: 150px !important;
+    }
+    .dl-horizontal dt {
+        width: 150px !important;
+    }
+    .dl-horizontal dt {
+        white-space: pre-wrap;
+        margin-bottom: 5px;
+        width: 200px;
+    }
+
+    table.bc-summary-table {
+        margin-right: 25px;
+        margin-left: -50px;
+    }
+
+    table.bc-summary-table td {
+        vertical-align: top;
+    }
+
+    table.bc-summary-table dt {
+        text-align: left !important;
+        margin-bottom: 10px;
+    }
+
+    .bc-top-offset {
+        padding-top: 50px;
+    }
+
+    .bc-details-images {
+        float: right;
+        margin-right: 25px;
+    }
+
+}
+
