--- a/src/arches_bchp/arches_bchp/templates/views/components/widgets/civic-address-widget.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/components/widgets/civic-address-widget.htm
@@ -44,10 +44,9 @@
                                                 value: tile().data[addressPart.attributes.node_id()],
                                                 state: 'display_value',
                                             }
-                                        }, click: function(){console.log(card);}">
-    </span>
+                                        }, click: function(){console.log(card);}"></span>
+    <span data-bind="visible: (!!tile().data[addressPart.attributes.node_id()]() && !!tile().data[province().attributes.node_id()]())">,</span>
     <!-- /ko -->
-    ,
     <!-- ko let: {addressPart: province()} -->
     <span data-bind="component: {
                                             name: addressPart.widgetLookup[addressPart.widget_id()].name,
