--- a/src/arches_bchp/arches_bchp/templates/views/components/widgets/base.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/components/widgets/base.htm
@@ -1,3 +1,4 @@
+{% load template_tags %}
 {% load i18n %}
 <!-- ko if: !configForm  && state === 'form' -->
 {% block form %}
@@ -8,7 +9,7 @@
 <!-- ko if: !ko.unwrap(hideEmptyNodes) || ko.unwrap(hideEmptyNodes) === true && displayValue() -->
 {% block report %}
 <dt data-bind="text: label()"></dt>
-<dd data-bind="text: displayValue() || '{% trans "None" %}'"></dd>
+<dd data-bind="text: displayValue() || $root.translations.none"></dd>
 {% endblock report %}
 <!-- /ko -->
 <!-- /ko -->
