--- a/src/arches_common/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/arches_common/templates/views/components/map_popup/toggle-map-popup.htm
@@ -1,28 +1,27 @@
 {% load i18n %}
 {% load template_tags %}
 
-
 <!-- ko if: loading() -->
 <div class="hover-feature-body hover-feature-loading">
     <i class="fa fa-spin fa-spinner"></i>
-    {% trans "Loading..." %}
+    <span data-bind="text: $root.translations.loading + '...'"></span>
 </div>
 <!--/ko-->
 
 <!-- ko if: !loading() -->
 <!-- ko foreach: popupFeatures -->
 <!-- ko if: active -->
-<!-- ko if: displayname -->
 <div class="hover-feature-title-bar">
     {% block title %}
     <div style="display: flex;">
         <div data-bind="visible: $parent.popupFeatures.length > 1, click: function(){$parent.advanceFeature('left')}" class="hover-feature-nav-left"><i class="fa fa-angle-left"></i></div>
         <div data-bind="visible: $parent.popupFeatures.length > 1, click: function(){$parent.advanceFeature('right')}" class="hover-feature-nav-right"><i class="fa fa-angle-right"></i></div>
+        <!-- ko if: displayname -->
         <div class="hover-feature-title" data-bind="text: displayname"></div>
+        <!--/ko-->
     </div>
     {% endblock title %}
 </div>
-<!--/ko-->
 <div class="hover-feature-body">
     {% block body %}
     <div class="hover-feature" data-bind="style: {'-webkit-line-clamp': showAll() ? '12' : '4', 'overflow-y': showAll() ? 'scroll' : 'hidden'}, html: map_popup"></div>
@@ -30,11 +29,11 @@
     <!-- ko if: resourceinstanceid -->
     <div class="hover-feature-metadata-block">
         <div class="hover-feature-metadata">
-            {% trans "Resource Model:" %}
+                <span data-bind="text: $root.translations.resourceModel"></span>
             <span data-bind="text: graph_name"></span>
         </div>
         <div class="hover-feature-metadata">
-            {% trans "ID:" %}
+                <span data-bind="text: $root.translations.idString"></span>
             <span data-bind="text: resourceinstanceid"></span>
         </div>
     </div>
@@ -56,7 +55,7 @@
             window.open(reportURL + ko.unwrap(resourceinstanceid));
         }" href="javascript:void(0)">
             <i class="ion-document-text"></i>
-            {% trans "Report" %}
+            <span data-bind="text: $root.translations.report"></span>
         </a>
         <!--/ko-->
         <!-- ko if:  mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
@@ -64,14 +63,14 @@
             window.open(editURL + ko.unwrap(resourceinstanceid));
         }" href="javascript:void(0)">
             <i class="ion-ios-refresh-empty"></i>
-            {% trans "Edit" %}
+            <span data-bind="text: $root.translations.edit"></span>
         </a>
         <!--/ko-->
     </div>
     <!-- ko if: $parent.popupFeatures.length > 1 -->
     <div style="display: flex; flex-direction: row; width: 60px; justify-content: space-evenly; font-weight: 500;">
         <div class="hover-feature-instance-counter" data-bind="text: 1 + $parent.popupFeatures.findIndex(feature => feature.active());"></div>
-        {% trans "of" %}
+            <span data-bind="text: $root.translations.of"></span>
         <div style="padding-left: 3px;" data-bind="text: $parent.popupFeatures.length"></div>
     </div>
     <!--/ko-->
