--- a/src/arches_bchp/arches_bchp/templates/views/components/widgets/civic-address-widget.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/components/widgets/civic-address-widget.htm
@@ -45,7 +45,7 @@
                                                 state: 'display_value',
                                             }
                                         }, click: function(){console.log(card);}"></span>
-    <span data-bind="visible: (!!tile().data[city().attributes.node_id()]() && !!tile().data[province().attributes.node_id()]())">,</span>
+    <span data-bind="visible: (!!ko.unwrap(tile().data[city().attributes.node_id()]) && !!ko.unwrap(tile().data[province().attributes.node_id()]))">,</span>
     <!-- /ko -->
     <!-- ko let: {addressPart: province()} -->
     <span data-bind="component: {
