210 - Fixed BCHP details formatting, added datatype config to resource model views (arches core PR 9068)

--- a/src/arches_common/media/css/project.css
+++ b/src/arches_common/media/css/project.css
@@ -109,11 +109,11 @@ table.bc-summary-table td {
         width: 80%
     }
 
-    .dl-horizontal dt {
+    div.bcrhp-grid-item .dl-horizontal dt {
         width: 170px !important;
     }
-    
-    .dl-horizontal dd {
+
+    div.bcrhp-grid-item .dl-horizontal dd {
         width: 70%;
     }
 
@@ -127,11 +127,11 @@ table.bc-summary-table td {
     .dl-horizontal {
     }
 
-    .dl-horizontal dd {
+    div.bcrhp-grid-item .dl-horizontal dd {
         /*margin-left: 170px !important;*/
         width: 70%;
     }
-    .dl-horizontal dt {
+    div.bcrhp-grid-item .dl-horizontal dt {
         width: 130px !important;
     }
     .bc-details-images {
