210 - Fixed BCRHP search results formatting, updated systems settings

--- a/src/arches_bchp/arches_bchp/templates/views/report-templates/bcrhp_site.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/report-templates/bcrhp_site.htm
@@ -315,7 +315,7 @@
                     </div>
 
                     <div class="bcrhp-grid-item bcrhp-full-width-grid-item bc-top-offset">
-                        <!-- ko let: { card: getCardWithName('BC Statment of Significance') } -->
+                        <!-- ko let: { card: getCardWithName('BC Statement of Significance') } -->
                         <!-- ko let: { widget: getWidgetWithLabel(card, 'Significance Description') } -->
                         <!-- ko foreach: { data: card.tiles, as: 'tile' } -->
                         <dl class="dl-horizontal dl-horizontal-bc" data-bind="css: {'provisional': ko.unwrap(tile.provisionaledits) !== null && tile.userisreviewer === false}">
