236 - Allow boolean checkbox label to expand dev - Fix fossils gitignore

--- a/src/arches_common/media/css/project.css
+++ b/src/arches_common/media/css/project.css
@@ -100,6 +100,10 @@ table.bc-summary-table td {
     padding: 5px 5px 5px 20px;
 }
 
+.form-boolean-checkbox span {
+    width: auto !important;
+}
+
 @media (min-width: 1366px)
 {
     .dl-horizontal {
