--- a/src/arches_fossils/arches_fossils/templates/views/components/widgets/checkbox-boolean.htm
+++ b/src/arches_fossils/arches_fossils/templates/views/components/widgets/checkbox-boolean.htm
@@ -10,7 +10,7 @@
         <i data-bind="css: {'ion-asterisk widget-label-required': node.isrequired}"></i>
         <!-- /ko -->
         <div class="col-xs-12">
-            <label class="form-checkbox form-normal form-primary form-text"
+            <label class="form-checkbox form-normal form-primary form-text form-boolean-checkbox"
                 data-bind="css: {
                     'active': isSelected(),
                     'disabled': $parent.disabled
